# stat

./: .gitignore  DistributedMCMCMap.mm  makefile  mergeATron.sh  readme.txt
CorAL/trunk/: .sconsign.dblite  SConstruct  makefile
CorAL/trunk/include/: kernel.h  misc.h  parametermap.h  random.h  sourcecalc.h
CorAL/trunk/tmpinclude/: arrays.h  coral.h  gslmatrix.h  wavefunction.h
Emulator/: README
Emulator/src/: Makefile
Emulator/src/libEmu/: Makefile
MCMC_CC/: makefile_defs.mk
MCMC_CC/CC_Code/: README  distribution.cc  distribution.h  emulator.cc  emulator.h  likelihood.cc  makefile  mcmc.cc  mcmc.h  mcmcrun.cc  parameter.cc  parameter.h  prior.cc  proposal.cc
MCMC_CC/CC_Code/COSMO_RUN/: mcmcrun.cc
MCMC_CC/CC_Code/RHIC_RUN/: make_params.cc  makeparams  mcmcrun.cc
MCMC_CC/CC_Code/src/: distribution.cc  distribution.h  emulator.cc  emulator.h  likelihood.cc  mcmc.cc  mcmc.h  parameter.cc  parameter.h  prior.cc  proposal.cc  visualization.cc  visualization.h
MCMC_CC/Matlab_Code/mcmctools/: Configure.m  NoisyData.m  comment2struct.m  mcmc.m  mcmc_sens.m  mcmcset.m  mcpostmean.m  mcpoststd.m  showtr_old.m  showtrs.m  struct2comment.m  warehousefun.m
ModelOptimization/: CMakeLists.txt  FindGSL.cmake  InformationForDevelopers.txt  KWStyle.xml  README.txt
ModelOptimization/include/: CosmoModel.h  CovarianceCalculator.h  DiceModel.h  Distribution.h  ExternalModel.h  Gaussian2DModel.h  InterModel.h  MCMCRun.h  Model.h  MultiModel.h  Optimizer.h  Parameter.h  Quad.h  RHICModel.h  RHIC_PCA_Model.h  RegularStepGradientDescentOptimizer.h  SimpleMetropolisHastings.h  TestModel.h  Trace.h  Visualization.h  process_pipe.h
ModelOptimization/main/: CMakeLists.txt  mcmc.cc
ModelOptimization/maintenance/: MADAILicense.txt  StyleCheck.sh
ModelOptimization/model_optimization.xcworkspace/xcuserdata/scottepratt.xcuserdatad/: UserInterfaceState.xcuserstate
ModelOptimization/src/: CMakeLists.txt  CosmoLikelihoodDistribution.cxx  CosmoLikelihoodDistribution.h  CosmoModel.cxx  CosmoModel.h  CosmoPriorDistribution.cxx  CosmoPriorDistribution.h  CovarianceCalculator.h  DiceModel.cxx  DiceModel.h  Distribution.cxx  Distribution.h  ExternalModel.cxx  ExternalModel.h  Gaussian2DModel.cxx  Gaussian2DModel.h  InterModel.cxx  InterModel.h  InterpolatorPriorDistribution.cxx  InterpolatorPriorDistribution.h  LikelihoodDistribution.cxx  LikelihoodDistribution.h  LikelihoodDistribution_RHIC.cxx  LikelihoodDistribution_RHIC_PCA.cxx  LikelihoodDistribution_Test.cxx  MCMCRun.cxx  MCMCRun.h  Model.cxx  Model.h  MultiModel.cxx  MultiModel.h  Optimizer.cxx  Optimizer.h  Parameter.h  PriorDistribution.cxx  PriorDistribution.h  PriorDistribution_Cosmo.cxx  PriorDistribution_Interpolator.cxx  PriorDistribution_RHIC_PCA.cxx  PriorInter.cxx  (+32 more)
ModelOptimization/src/Distributions/: Distribution.cxx  LikelihoodCosmo.cxx  LikelihoodRHIC.cxx  LikelihoodRHIC_PCA.cxx  LikelihoodTest.cxx  PriorCosmo.cxx  PriorInter.cxx  PriorRHIC.cxx  PriorRHIC_PCA.cxx  PriorTest.cxx  Proposal.cxx
ModelOptimization/test/: CMakeLists.txt  DiceMCMC.cxx  Gaussian2DMCMCTest.cxx  Gaussian2DModelTest.cxx  MCMC_core_test.cxx  ModelTest.cxx  RegularStepGradientDescentOptimizerTest.cxx  emulator_emulator.py  external_model_plus_mhmcmc_test.cxx
b3d/trunk/: SConstruct  makefile
b3d/trunk/include/: analyze.h  parametermap.h  resonances.h
b3d/trunk/resinfo/: pdgreader
emu-analysis/: CMakeLists.txt  README
emu-analysis/examples/: mcTest.R
emu-analysis/src/: fnAnalysis.R  fnHyperAnalysis.R  fnMcSampling.R
isHydro3/: CCell.cpp  CCell.h  CEos.cpp  CEos.h  CHydro.cpp  CHydro.h  CMesh.cpp  CMesh.h  def.h  fixed.param  main.cpp  makefile  stats.param
isHydro3/EosData/fromPasi/: a.out
isHydro3/src/: CCell.cpp  CCell.h  CEos.cpp  CHydro.cpp  CHydro.h  CMesh.cpp  CMesh.h  hydroDef.h
lapackpp_example/: Makefile  lapackpp_example.cxx
latinhyper3/: latin3.sh  parmaker.cc
latinhyper3_R/: genSamples.R  parmaker.cc
latinhyper3_R/lhs_from_chris/: readme.txt
latinhyper3_cpp/src/: parmaker_latin.cc
misc/: bmaker.cc  makefile  qualifier.h
msu-chemtreeN-analysis/design/: desToCSV.R  gendesign.R  info.txt
msu-chemtreeN-analysis/writeup/: chemtree-notes.tex  images-lum  images-met
msu-hydro-analysis/: CrossCheck.py  EmulatorTestModel.py  MCMCTestModel.py  prettyPrint.py  quadcheck.gplt  readPoint.py  readme.txt  sample-emu.sh  setup.py  setup.sh  todo.txt  train_emulator.sh
msu-hydro-analysis/data-prep/: generate-analysis-files.rb  process-parameters.sh  readme.txt
msu-hydro-analysis/examples/: actual.param  fixed.param  likelihood.param  mcmc.param  proposal.param  readme  stats.param  theta0.param
msu-hydro-analysis/exp-analysis/: setup.sh
msu-hydro-analysis/model-data/: readme.txt
msu-hydro-analysis/src/: computePoints.R  computePoints.sh  computePointsOutput.R  makeThetas.R  makeThetas.sh  testPts.txt
msu-hydro-analysis/visualization/: Alltrace.py  HeatMap.py  Onetrace.py  PlotAllTrace.py  Prepare_for_Scott.py  aves  aves.C  checkPoints  checkPoints.C  input.txt  plotall.py
pca-src/: pca.cc  pca.h
rhicEmu/: todo.txt
rhicEmu/src/: computePoints.R  computePoints.sh  computePointsOutput.R  emu-pca-example.R  emu-pca.R  gen-samp.R  holdTest.sh  loopTest.R  makeThetas.R  makeThetas.sh  simple-test.R  test-run.R
rhicstat/: makefile
rhicstat/include/: rhicstat.h
rhicstat/latinhyper3/: latin3.sh  makefile  parmaker  parmaker.cc
rhicstat/src/: calcsens.cc  calcsens_copy.cc  covariance.cc  gp.cc  interpolator.cc  latin_center.cc  latin_center.h  latin_center_main.cc  locallinear.cc  mcmc.cc  oldcalcsens.cc  parmaker_random.cc  pca.cc  pca.h  quadfit.cc  qualifier.cc  rhicstat.cc  rhicstat.h  rhicstat_pca.cc  runinfo.cc  zgetter.cc
run/: LatData  analyzemain.cc  b3dmain.cc  hydromain.cc  makefile  master.sh  run.sh  runpbs.sh
run/parameters/: fixed.param  stats.param
src/: pca.cc  pca.h  qualifier.cc  qualifier.h
tutorial/: dice_evaluate.py  dice_model_example.py  interactive_harness.py  latin-hyper-sample  statistics.py
tutorial/document/: Makefile  StatisticsTutorial.tex  utfsymb.sty
(+251 files in other folders)
